<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="spotify_btn">Spotify Streamer</string>
    <string name="scores_btn">Football Scores App</string>
    <string name="library_btn">Library App</string>
    <string name="build_it_btn">Build It Bigger</string>
    <string name="reader_btn">XYZ Reader</string>
    <string name="capstone_btn">Capstone: My Own App</string>


</resources>
