<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.afroz.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main"
    android:backgroundTint="#acd9e4">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_alignLeft="@+id/btn_spotify_streamer"
        android:layout_alignStart="@+id/btn_spotify_streamer"
        android:layout_alignRight="@+id/btn_spotify_streamer"
        android:layout_alignEnd="@+id/btn_spotify_streamer"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn_spotify_streamer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_btn"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/title_text"
        android:backgroundTint="#F08C35"
        android:layout_alignLeft="@+id/btn_build_it_bigger"
        android:layout_alignStart="@+id/btn_build_it_bigger"
        android:layout_alignRight="@+id/btn_scores_app"
        android:layout_alignEnd="@+id/btn_scores_app"
        android:onClick="launch_streamerApp"/>

    <Button
        android:id="@+id/btn_scores_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores_btn"
        android:layout_below="@+id/btn_spotify_streamer"
        android:layout_marginTop="20dp"
        android:backgroundTint="#F08C35"
        android:layout_alignLeft="@+id/btn_xyz_reader"
        android:layout_alignStart="@+id/btn_xyz_reader"
        android:layout_alignRight="@+id/btn_xyz_reader"
        android:layout_alignEnd="@+id/btn_xyz_reader"
        android:onClick="launch_scoresApp"/>

    <Button
        android:id="@+id/btn_library_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_btn"
        android:layout_below="@+id/btn_scores_app"
        android:layout_marginTop="20dp"
        android:backgroundTint="#F08C35"
        android:layout_alignLeft="@+id/btn_xyz_reader"
        android:layout_alignStart="@+id/btn_xyz_reader"
        android:layout_alignRight="@+id/btn_scores_app"
        android:layout_alignEnd="@+id/btn_scores_app"
        android:onClick="launch_libraryApp"
        />

    <Button
        android:id="@+id/btn_build_it_bigger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_btn"
        android:backgroundTint="#F08C35"
        android:layout_below="@+id/btn_library_app"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/btn_xyz_reader"
        android:layout_alignStart="@+id/btn_xyz_reader"
        android:layout_alignRight="@+id/btn_library_app"
        android:layout_alignEnd="@+id/btn_library_app"
        android:onClick="launch_buildItApp"
        />

    <Button
        android:id="@+id/btn_xyz_reader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reader_btn"
        android:layout_below="@+id/btn_build_it_bigger"
        android:layout_marginTop="20dp"
        android:backgroundTint="#F08C35"
        android:layout_alignLeft="@+id/btn_capstone"
        android:layout_alignStart="@+id/btn_capstone"
        android:layout_alignRight="@+id/btn_capstone"
        android:layout_alignEnd="@+id/btn_capstone"
        android:onClick="launch_XYZReaderApp"
        />

    <Button
        android:id="@+id/btn_capstone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone_btn"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/btn_xyz_reader"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#e7c50d1c"
        android:onClick="launch_capstoneApp"
        />

</RelativeLayout>
